[gd_scene load_steps=11 format=3 uid="uid://px2kgudsnnp4"]

[ext_resource type="Script" path="res://Characters/WaterEnemy/waterEnemy.gd" id="1_pws7e"]
[ext_resource type="Texture2D" uid="uid://dv1mi277s1bxq" path="res://Characters/BowEnemy/enemy_placeholder.png" id="2_ubdnj"]
[ext_resource type="Texture2D" uid="uid://dlglf0036ahqr" path="res://Characters/WaterEnemy/hide.png" id="4_6af1x"]
[ext_resource type="Texture2D" uid="uid://ce0v3qspi4jbg" path="res://Characters/BowEnemy/emote.png" id="4_hkp7q"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_cajgj"]
radius = 11.5

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_awd0n"]
radius = 5.0
height = 24.0

[sub_resource type="AtlasTexture" id="AtlasTexture_j8mi7"]
atlas = ExtResource("4_hkp7q")
region = Rect2(3, 0, 3, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_7glq5"]
atlas = ExtResource("4_hkp7q")
region = Rect2(0, 0, 1, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_rnpsk"]
atlas = ExtResource("4_hkp7q")
region = Rect2(0, 0, 3, 6)

[sub_resource type="SpriteFrames" id="SpriteFrames_upvyx"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_j8mi7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glq5")
}],
"loop": false,
"name": &"confuse",
"speed": 1.0
}, {
"frames": [],
"loop": false,
"name": &"none",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rnpsk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7glq5")
}],
"loop": false,
"name": &"notice",
"speed": 1.0
}]

[node name="WaterEnemy" type="CharacterBody2D"]
collision_layer = 128
collision_mask = 128
motion_mode = 1
script = ExtResource("1_pws7e")

[node name="AtkSprite" type="Sprite2D" parent="."]
texture = ExtResource("2_ubdnj")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CapsuleShape2D_cajgj")

[node name="ArrowCollider" type="Area2D" parent="." groups=["softhit"]]

[node name="CollisionShape2D" type="CollisionShape2D" parent="ArrowCollider"]
position = Vector2(-1, -5)
shape = SubResource("CapsuleShape2D_awd0n")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 4.0
autostart = true

[node name="Emote" type="AnimatedSprite2D" parent="."]
position = Vector2(-2, -25)
sprite_frames = SubResource("SpriteFrames_upvyx")
animation = &"none"

[node name="SightLine" type="RayCast2D" parent="."]
collision_mask = 2
collide_with_areas = true

[node name="SightCheck" type="Timer" parent="."]
wait_time = 0.25
autostart = true

[node name="HideSprite" type="Sprite2D" parent="."]
texture = ExtResource("4_6af1x")

[connection signal="child_entered_tree" from="." to="." method="_on_child_entered_tree"]
[connection signal="child_entered_tree" from="ArrowCollider" to="." method="_on_arrow_collider_child_entered_tree"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="SightCheck" to="." method="_on_sight_check_timeout"]
